--- a/Loneliness-mindmap-filter.html
+++ b/Loneliness-mindmap-filter.html
@@ -15,11 +15,18 @@
             font-family: Arial, sans-serif;
             background-color: #f0f8ff;
         }
+
+        #categoryFilter {
+	font-family: Arial, sans-serif;
+	font-size: 15px;
+        }
+
     </style>
 </head>
 <body>
-    <h1 align=center>מפת חשיבה: בדידות בקרב זקנים</h1>
 
+<div align=center>
+    <h1>מפת חשיבה: בדידות בקרב זקנים</h1>
   <select id="categoryFilter">
         <option value="all">הצג הכל</option>
         <option value="2">גורמי סיכון</option>
@@ -34,7 +41,7 @@
         <option value="11">מיומנויות חברתיות</option>
     </select>
  
-
+</div>
 
 
     <div id="mynetwork"></div>
