--- a/index.html
+++ b/index.html
@@ -3,5 +3,14 @@
 <body>
 <h1>OBN Files</h1>
 <p>Links:...</p>
+
+<p>
+<a href="Loneliness-mindmap-filter.html">
+מפת חשיבה: בדידות בקרב זקנים
+</a></p>
+<p>
+<a href="activity-mindmap.html">
+מפת חשיבה: פעילות גופנית בקרב זקנים
+</a></p>
 </body>
 </html>
