--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="he" dir="rtl">
 <body>
+<div align=center>
 <h1>OBN Files</h1>
-<p>Links:...</p>
-
-<p>
-<a href="Loneliness-mindmap-filter.html">
-מפת חשיבה: בדידות בקרב זקנים
-</a></p>
-<p>
-<a href="activity-mindmap.html">
-מפת חשיבה: פעילות גופנית בקרב זקנים
-</a></p>
+<p>קישורים</p>
+<p> <a href="Loneliness-mindmap-filter.html"> מפת חשיבה: בדידות בקרב זקנים </a></p>
+<p> <a href="activity-mindmap.html"> מפת חשיבה: פעילות גופנית בקרב זקנים </a></p>
+<p> <a href="OBN-SIG.html"> הוספת חתימה על תמונות </a></p>
+<p> <a href="persona-cards.html"> דוגמה לכרטיס פרסונה </a></p>
 </body>
 </html>
