--- a/OBN-SIG.html
+++ b/OBN-SIG.html
@@ -63,7 +63,12 @@
 	<br>
  4. בחרו את רוחב החתימה, 5. בחרו את רמת השקיפות של החתימה,
 <br>
-6. בחרו את איכות התמונה, 7. לחצו לשמירת התמונה.</p>
+6. בחרו את איכות התמונה, 7. לחצו לשמירת התמונה.
+<br>
+<iframe width="420" height="315"
+src="https://www.youtube.com/watch?v=GDypiQSHBQ0">
+</iframe>
+</p>
         <p class="small-text">על מנת שהחתימה תעבוד בצורה הטובה ביותר - קובץ החתימה צריך להיות קובץ עם שקיפות ובפורמט PNG</p>
 
         <button onclick="document.getElementById('mainImage').click()">1. העלאת קובץ תמונה</button>
