--- a/OBN-SIG.html
+++ b/OBN-SIG.html
@@ -63,11 +63,7 @@
 	<br>
  4. בחרו את רוחב החתימה, 5. בחרו את רמת השקיפות של החתימה,
 <br>
-6. בחרו את איכות התמונה, 7. לחצו לשמירת התמונה.
-<br>
-<iframe width="420" height="315"
-src="https://www.youtube.com/watch?v=GDypiQSHBQ0">
-</iframe>
+6. בחרו את איכות התמונה, 7. לחצו לשמירת התמונה (ראו סרטון הסבר למטה)
 </p>
         <p class="small-text">על מנת שהחתימה תעבוד בצורה הטובה ביותר - קובץ החתימה צריך להיות קובץ עם שקיפות ובפורמט PNG</p>
 
@@ -102,6 +98,11 @@ src="https://www.youtube.com/watch?v=GDypiQSHBQ0">
 
         <br>
         <button onclick="saveImage()">7. שמירת קובץ התמונה עם החתימה</button>
+
+<br>
+<iframe width="420" height="315" src="https://www.youtube.com/embed/GDypiQSHBQ0">
+</iframe>
+
 
         <footer>
             אפליקציה להוספת חתימה על תמונה. © OBN 2024
