--- a/index.html
+++ b/index.html
@@ -1,13 +1,116 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>עמוד הבית של OBN</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f8ff;
+            color: #333;
+        }
+        header {
+            background-color: #0073e6;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        h1, h2 {
+            margin: 0;
+        }
+        main {
+            padding: 20px;
+        }
+        table {
+            width: auto;
+            margin: 0 auto;
+            border-collapse: collapse;
+            margin-top: 20px;
+            max-width: 100%;
+        }
+        th, td {
+            padding: 10px;
+            text-align: right;
+            border-bottom: 1px solid #ddd;
+            white-space: nowrap;
+        }
+        th {
+            background-color: #e0f7ff;
+        }
+        a {
+            color: #0073e6;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        footer {
+            background-color: #0073e6;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
+            table {
+                width: 100%;
+                display: block;
+                overflow-x: auto;
+            }
+        }
+    </style>
+</head>
 <body>
-<div align=center>
-<h1>OBN Files</h1>
-<p>קישורים</p>
-<p> <a href="Loneliness-mindmap-filter.html"> מפת חשיבה: בדידות בקרב זקנים </a></p>
-<p> <a href="activity-mindmap.html"> מפת חשיבה: פעילות גופנית בקרב זקנים </a></p>
-<p> <a href="OBN-SIG.html"> הוספת חתימה על תמונות </a></p>
-<p> <a href="persona-cards.html"> דוגמה לכרטיס פרסונה </a></p>
-<p> <a href="OBN-Mem-Game.html"> משחק זכרון </a></p>  
+
+<header>
+    <h1>עמוד הבית של OBN</h1>
+    <h2>פרויקטים שנכתבו באמצעות בינה מלאכותית</h2>
+</header>
+
+<main>
+    <table>
+        <thead>
+            <tr>
+                <th>שם הפרויקט</th>
+                <th>קישור</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>מפת חשיבה: בדידות בקרב זקנים</td>
+                <td><a href="Loneliness-mindmap-filter.html">קישור</a></td>
+            </tr>
+            <tr>
+                <td>מפת חשיבה: פעילות גופנית בקרב זקנים</td>
+                <td><a href="activity-mindmap.html">קישור</a></td>
+            </tr>
+            <tr>
+                <td>הוספת חתימה על תמונות</td>
+                <td><a href="OBN-SIG.html">קישור</a></td>
+            </tr>
+            <tr>
+                <td>דוגמה לכרטיס פרסונה</td>
+                <td><a href="persona-cards.html">קישור</a></td>
+            </tr>
+            <tr>
+                <td>משחק זכרון</td>
+                <td><a href="OBN-Mem-Game.html">קישור</a></td>
+            </tr>
+        </tbody>
+    </table>
+</main>
+
+<footer>
+    כל הזכויות שמורות OBN 2024
+</footer>
+
 </body>
 </html>
