--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                 <td>משחק זכרון</td>
                 <td><a href="OBN-Mem-Game.html">קישור</a></td>
             </tr>
+            <tr>
+                <td>מחשבון גיל ותאריך לידה עברי</td>
+                <td><a href="OBN-Birth.html">קישור</a></td>
+            </tr>
+
         </tbody>
     </table>
 </main>
