--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                 <td><a href="OBN-Birth.html">קישור</a></td>
             </tr>
 
+            <tr>
+                <td>תזכורן ימי הולדת</td>
+                <td><a href="OBN-Birthday-App.html">קישור</a></td>
+            </tr>
+
         </tbody>
     </table>
 </main>
