--- a/index.html
+++ b/index.html
@@ -113,6 +113,12 @@
                 <td>תזכורן ימי הולדת</td>
                 <td><a href="OBN-Birthday-App.html">קישור</a></td>
             </tr>
+            <tr>
+                <td>גלגל המזל</td>
+                <td><a href="OBN-Fortune-Wheel.html">קישור</a></td>
+            </tr>
+
+
 
         </tbody>
     </table>
