--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </tr>
 
             <tr>
-                <td>תזכורן ימי הולדת</td>
+                <td>תזכורן ימי הולדת - מובייל</td>
                 <td><a href="OBN-Birthday-App1.html">קישור</a></td>
             </tr>
 
