--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
                 <td><a href="OBN-Birthday-App-001.html">קישור</a></td>
             </tr>
 
+            <tr>
+                <td>תזכורן ימי הולדת עם תאריך עברי</td>
+                <td><a href="OBN-Birthday-Heb.html">קישור</a></td>
+            </tr>
             
             <tr>
                 <td>גלגל המזל</td>
