--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
                 <td><a href="OBN-Fortune-Wheel.html">קישור</a></td>
             </tr>
 
+            <tr>
+                <td>Health Questionnaire</td>
+                <td><a href="Health-Questionnaire.html">קישור</a></td>
+            </tr>
+
 
 
         </tbody>
