--- a/Health-Questionnaire.html
+++ b/Health-Questionnaire.html
@@ -320,7 +320,7 @@ function displayResults(answers) {
             } else if (avg1 >= 5 && avg1 <= 7) {
                 mess1 = "Your Health Management level is medium";
             } else {
-                mess1 = "Your Health Management level is high";
+                mess1 = "Well done! Your Health Management level is high";
             }
 
             if (avg2 >= 1 && avg2 <= 4) {
@@ -328,15 +328,15 @@ function displayResults(answers) {
             } else if (avg2 >= 5 && avg2 <= 7) {
                 mess2 = "Your level of Maintaining a Healthy Lifestyle is medium";
             } else {
-                mess2 = "Your level of Maintaining a Healthy Lifestyle is high";
+                mess2 = "Well done! Your level of Maintaining a Healthy Lifestyle is high";
             }
-			combAvg = (avg1+avg2)/2
+			combAvg = (avg1+avg2)/2 ;
 // OBN End
 
             document.getElementById('averages').innerHTML = `
-                ${mess1}. The score is: <font color="red"><b> ${avg1.toFixed(2)}</b></font><br>
-                ${mess2}. The score is: <font color="red"><b> ${avg2.toFixed(2)} </b></font><br>
-				Your combined Health Management Pantry score is: <font color="red"><b> ${combAvg} </b></font><br>
+                ${mess1}. The score is: <font color="red"><b> ${avg1.toFixed(2)} of 10</b></font><br>
+                ${mess2}. The score is: <font color="red"><b> ${avg2.toFixed(2)} of 10</b></font><br>
+				Your combined Health Management Pantry score is: <font color="red"><b> ${combAvg} of 10</b></font><br>
             `;
 		}
 
