--- a/index.html
+++ b/index.html
@@ -85,30 +85,22 @@
         </thead>
         <tbody>
             <tr>
-                <td>מפת חשיבה: בדידות בקרב זקנים</td>
-                <td><a href="Loneliness-mindmap-filter.html">קישור</a></td>
-            </tr>
-            <tr>
-                <td>מפת חשיבה: פעילות גופנית בקרב זקנים</td>
-                <td><a href="activity-mindmap.html">קישור</a></td>
-            </tr>
-            <tr>
                 <td>הוספת חתימה על תמונות</td>
                 <td><a href="OBN-SIG.html">קישור</a></td>
             </tr>
             <tr>
-                <td>דוגמה לכרטיס פרסונה</td>
-                <td><a href="persona-cards.html">קישור</a></td>
-            </tr>
-            <tr>
-                <td>משחק זכרון</td>
+                <td>משחק זכרון רגיל</td>
                 <td><a href="OBN-Mem-Game.html">קישור</a></td>
             </tr>
+            <tr>
+                <td>משחק זכרון מתקדם</td>
+                <td><a href="OBN-Mem-Game-02.html">קישור</a></td>
+            </tr>			
             <tr>
                 <td>מחשבון גיל ותאריך לידה עברי</td>
                 <td><a href="OBN-Birth.html">קישור</a></td>
             </tr>
-
+<!--
             <tr>
                 <td>תזכורן ימי הולדת</td>
                 <td><a href="OBN-Birthday-App.html">קישור</a></td>
@@ -118,7 +110,7 @@
                 <td>תזכורן ימי הולדת - מובייל</td>
                 <td><a href="OBN-Birthday-App-001.html">קישור</a></td>
             </tr>
-
+-->
             <tr>
                 <td>תזכורן ימי הולדת עם תאריך עברי</td>
                 <td><a href="OBN-Birthday-Heb.html">קישור</a></td>
@@ -128,18 +120,27 @@
                 <td>גלגל המזל</td>
                 <td><a href="OBN-Fortune-Wheel.html">קישור</a></td>
             </tr>
-
-            <tr>
-                <td>Health Questionnaire</td>
-                <td><a href="Health-Questionnaire.html">קישור</a></td>
-            </tr>
-
             <tr>
                 <td>Advanced Color Picker</td>
                 <td><a href="OBN-Color-Picker.html">קישור</a></td>
             </tr>			
 
-
+            <tr>
+                <td>מפת חשיבה: בדידות בקרב זקנים</td>
+                <td><a href="Loneliness-mindmap-filter.html">קישור</a></td>
+            </tr>
+            <tr>
+                <td>מפת חשיבה: פעילות גופנית בקרב זקנים</td>
+                <td><a href="activity-mindmap.html">קישור</a></td>
+            </tr>
+            <tr>
+                <td>דוגמה לכרטיס פרסונה</td>
+                <td><a href="persona-cards.html">קישור</a></td>
+            </tr>			
+         <tr>
+                <td>Health Questionnaire</td>
+                <td><a href="Health-Questionnaire.html">קישור</a></td>
+            </tr>
 
         </tbody>
     </table>
