--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
                 <td>Health Questionnaire</td>
                 <td><a href="Health-Questionnaire.html">קישור</a></td>
             </tr>
+         <tr>
+                <td>אפליקציית ניקוד וניהול</td>
+                <td><a href="Scores-Admin.html">ניהול</a> |  <a href="Scores-User.html">ניקוד</a> </td>
+            </tr>
+
 
         </tbody>
     </table>
