--- a/Health-Questionnaire.html
+++ b/Health-Questionnaire.html
@@ -239,12 +239,12 @@ function displayResults(answers) {
 //                backgroundColor: 'rgba(32, 178, 170, 0.2)',
 //                borderColor: 'rgba(32, 178, 170, 1)',
 //                pointBackgroundColor: 'rgba(32, 178, 170, 1)',
-                backgroundColor: 'rgba(255, 0, 55, 0.2)',
-                borderColor: 'rgba(255, 0, 55, 1)',
-                pointBackgroundColor: 'rgba(255, 0, 55, 1)',				
+                backgroundColor: 'rgba(255, 99, 132, 0.2)',
+                borderColor: 'rgba(255, 99, 132, 1)',
+                pointBackgroundColor: 'rgba(255, 99, 132, 1)',				
                 pointBorderColor: '#fff',
                 pointHoverBackgroundColor: '#fff',
-                pointHoverBorderColor: 'rgba(255, 0, 55, 1)'
+                pointHoverBorderColor: 'rgba(255, 99, 132, 1)'
             }]
         },
         options: {
@@ -315,12 +315,12 @@ function displayResults(answers) {
 // OBN End
 
             document.getElementById('averages').innerHTML = `
-                ${mess1}. The score is: <font color="red"><b> ${avg1.toFixed(2)} (of 10)</b></font><br>
-                ${mess2}. The score is: <font color="red"><b> ${avg2.toFixed(2)} (of 10)</b></font><br>
+                ${mess1}. The score is: <font color=#FF6384><b> ${avg1.toFixed(2)} (of 10)</b></font><br>
+                ${mess2}. The score is: <font color=#FF6384><b> ${avg2.toFixed(2)} (of 10)</b></font><br>
             `;
 		}
 
-//				Your combined Health Management Pantry score is: <font color="red"><b> ${combAvg} (of 10)</b></font><br>
+//				Your combined Health Management Pantry score is: <font color=#FF6384><b> ${combAvg} (of 10)</b></font><br>
 
 
         createQuestions();
