--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
                 <td>תזכורן ימי הולדת עם תאריך עברי</td>
                 <td><a href="OBN-Birthday-Heb.html">קישור</a></td>
             </tr>
-            
+			<tr>
+                <td>משחק ניחוש מילים</td>
+                <td><a href="OBN-Words.html">קישור</a></td>
+            </tr>            
             <tr>
                 <td>גלגל המזל</td>
                 <td><a href="OBN-Fortune-Wheel.html">קישור</a></td>
