--- a/index.html
+++ b/index.html
@@ -100,24 +100,13 @@
                 <td>מחשבון גיל ותאריך לידה עברי</td>
                 <td><a href="OBN-Birth.html">קישור</a></td>
             </tr>
-<!--
-            <tr>
-                <td>תזכורן ימי הולדת</td>
-                <td><a href="OBN-Birthday-App.html">קישור</a></td>
-            </tr>
-
-            <tr>
-                <td>תזכורן ימי הולדת - מובייל</td>
-                <td><a href="OBN-Birthday-App-001.html">קישור</a></td>
-            </tr>
--->
             <tr>
                 <td>תזכורן ימי הולדת עם תאריך עברי</td>
                 <td><a href="OBN-Birthday-Heb.html">קישור</a></td>
             </tr>
 			<tr>
                 <td>משחק ניחוש מילים</td>
-                <td><a href="OBN-Words.html">קישור</a></td>
+                <td><a href="OBN-Words-Encrypted.html">קישור</a></td>
             </tr>            
             <tr>
                 <td>גלגל המזל</td>
@@ -148,7 +137,10 @@
                 <td>אפליקציית ניקוד וניהול</td>
                 <td><a href="Scores-Admin.html">ניהול</a> |  <a href="Scores-User.html">ניקוד</a> </td>
             </tr>
-
+			<tr>
+                <td>Word Encryptor</td>
+                <td><a href="OBN-Word-Encryptor.html">קישור</a></td>
+            </tr>            
 
         </tbody>
     </table>
