--- a/index.html
+++ b/index.html
@@ -141,6 +141,10 @@
                 <td>Word Encryptor</td>
                 <td><a href="OBN-Word-Encryptor.html">קישור</a></td>
             </tr>            
+			<tr>
+                <td>ניהול הוצאות</td>
+                <td><a href="OBN-Expenses.html">קישור</a></td>
+            </tr>            
 
         </tbody>
     </table>
