--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
         </thead>
         <tbody>
             <tr>
+                <td>יצירת חתימה לשימוש במסמכים או תמונות</td>
+                <td><a href="OBN-Text-to-Sig.html">קישור</a></td>
+            </tr>		
+            <tr>
                 <td>הוספת חתימה על תמונות</td>
                 <td><a href="OBN-SIG.html">קישור</a></td>
             </tr>
