--- a/OBN-SIG.html
+++ b/OBN-SIG.html
@@ -74,8 +74,10 @@
 </p>
         <p class="small-text">על מנת שהחתימה תעבוד בצורה הטובה ביותר - קובץ החתימה צריך להיות קובץ עם שקיפות ובפורמט PNG
 		<br>
-		אין לכם חתימה? תוכלו ליצור אחת למטה.
-		</p>
+		אין לכם חתימה? תוכלו ליצור אחת למטה, או 
+				<a href="https://obn-kappa.vercel.app/OBN-Text-to-Sig.html">
+	 		באפליקציית הקסמים שלי</a>
+			</p>
 
         <button onclick="document.getElementById('mainImage').click()">1. העלאת קובץ תמונה</button>
         <input type="file" id="mainImage" style="display: none;" accept="image/*" onchange="loadMainImage(event)">
