--- a/OBN-Eng.html
+++ b/OBN-Eng.html
@@ -395,7 +395,7 @@ function nextWord() {
 
 
         function updateScore() {
-            document.getElementById('score').innerHTML = `ציון: ${score}`;
+            document.getElementById('score').innerHTML = `ניקוד: ${score}`;
         }
 
         function endGame() {
