--- a/OBN-Eng.html
+++ b/OBN-Eng.html
@@ -378,7 +378,7 @@ function nextWord() {
             isFirstPhase = false;
             currentWordIndex = 0;
 //            document.getElementById('feedback').innerHTML = "יפה מאד! עברת לשלב השני! כעת נסי לכתוב את המילה באנגלית";
-			document.getElementById('feedback').innerHTML = `<font color="F00">יפה מאד! עברת לשלב השני! כעת נסי לכתוב את המילה באנגלית$</font>`;
+			document.getElementById('feedback').innerHTML = `<font color="#2C3E50">יפה מאד! עברת לשלב השני! כעת נסי לכתוב את המילה באנגלית</font>`;
 				
             setTimeout(() => {
                 document.getElementById('feedback').innerHTML = '';
