--- a/OBN-Eng.html
+++ b/OBN-Eng.html
@@ -172,7 +172,9 @@
         </thead>
         <tbody></tbody>
     </table>
-
+<br><br>
+<footer>Copytight OBN 2024 </footer>
+<footer><a href="OBN-Eng-Words-Admin.html">Admin page</a></footer>
     <script>
         const words = [
             { english: 'Happiness', hebrew: 'שמחה/אושר' },
@@ -270,18 +272,6 @@ function setupEventListeners() {
         soundEnabled = this.checked;
     });
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*
         function checkAnswer() {
