--- a/index.html
+++ b/index.html
@@ -93,6 +93,15 @@
                 <td><a href="OBN-SIG.html">קישור</a></td>
             </tr>
             <tr>
+                <td>לימוד אנגלית</td>
+                <td><a href="OBN-Eng.html">קישור</a></td>
+            </tr>		
+            <tr>
+                <td>לימוד אנגלית 2</td>
+                <td><a href="OBN-Eng-02.html">קישור</a></td>
+            </tr>					
+            <tr>			
+            <tr>
                 <td>משחק זכרון רגיל</td>
                 <td><a href="OBN-Mem-Game.html">קישור</a></td>
             </tr>
